# sourcetrace

./: .gitignore  .ip-timestamp  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  COPYRIGHT_AND_ATTRIBUTIONS.md  IP_DECLARATION.md  IP_DISCLOSURE.md  LDIR_CLAIMS.md  LICENSE  NOTICE  PATENT.md  README.md  SECURITY.md  TRADEMARK.md  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-fix-lint.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  ip-audit.yml
api/: __init__.py  models.py
core/: __init__.py  certifier.py  ledger.py  verifier.py
quartz4/: README.md  __init__.py  collector.py  crucible.py  labyrinth.py  main.py  memory.py  oracle.py  requirements.txt  sentinel.py
quartz4/tests/: conftest.py  test_crucible.py  test_labyrinth.py  test_memory.py  test_oracle.py  test_quartz4_api.py  test_sentinel.py
src/: cli.ts  engine.ts  index.ts  types.ts
src/analyzers/: arch-mapper.ts  doc-differ.ts  evidence-classifier.ts  footgun-detector.ts  gap-mapper.ts  quickstart-extractor.ts  test-reader.ts
src/utils/: fs.ts  git.ts
tests/: __init__.py  conftest.py  test_api.py  test_certifier.py  test_ledger.py  test_verifier.py
